<resources>
    <string name="app_name">operaciones</string>
    <string name="btnjugar">jugar</string>
    <string name="ett">¿Cómo te llamas?</string>
    <string name="tv">Record</string>

    <string name="et_vidas">Coche: </string>
    <string name="jugador_nombre">Jugador:</string>
    <string name="total_score">Score: 0</string>
    <string name="boton_sumar">Comprobar</string>
    <string name="et_respuesta">Respuesta</string>
    <string name="img_aleatorio">portada</string>
    <string name="img_aleatorio2">portada</string>
    <string name="tv_invisible">numero</string>
    <string name="tv_invisible2">numero2</string>
    <string name="jugador">Jugador: </string>
    <string name="score">Score: </string>
    <string name="txt_vidas">3</string>
</resources>